...
            WCSession.defaultSession().activateSession()
            print(#function, "Ativado")
        } else {
            print(#function, "Desativado")
        }

        addMenuItemWithItemIcon(.Accept, title: "Salvar", action: #selector(PrecoIlimitadoController.salvar))
        msg = ""
    }

    override func willActivate() {
        // This method is called when watch view controller is about to be visible to user
        super.willActivate()
...
