...
/* Class = "WKInterfaceButton"; title = "0"; ObjectID = "EvK-rE-Awv"; */
"EvK-rE-Awv.title" = "0";

/* Class = "WKInterfaceLabel"; text = "Nome da lista:"; ObjectID = "K2d-lF-0wb"; */
"K2d-lF-0wb.text" = "Nome da lista:";

/* Class = "WKInterfaceLabel"; text = "Valor"; ObjectID = "LBD-qA-W1q"; */
"LBD-qA-W1q.text" = "Valor";

/* Class = "WKInterfaceButton"; title = "Definir nome"; ObjectID = "Mt3-cc-CMk"; */
"Mt3-cc-CMk.title" = "Definir nome";

/* Class = "WKInterfaceController"; title = "Done"; ObjectID = "QKX-3x-CSC"; */
...
