...
/* Class = "UILabel"; text = "Title"; ObjectID = "Lac-0I-i8P"; */
"Lac-0I-i8P.text" = "Title";

/* Class = "UIBarButtonItem"; title = "Finalizar Lista"; ObjectID = "Lpx-I4-eAO"; */
"Lpx-I4-eAO.title" = "End List";

/* Class = "UINavigationItem"; title = "Orçamento Limitado"; ObjectID = "M0V-si-TYd"; */
"M0V-si-TYd.title" = "Limited Budget";

/* Class = "UIBarButtonItem"; title = "Alterar Limite"; ObjectID = "NTg-pE-2Zm"; */
"NTg-pE-2Zm.title" = "Change Limit";

/* Class = "UILabel"; text = "Valor gasto"; ObjectID = "PNv-IJ-Z0u"; */
...
